--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -51,7 +51,7 @@
                                 <button class="primary-btn" name="Submit" value="Login" type="Submit" >Đăng nhập</button>
                             </div>
                             <div class="col-md-12 form-group register">
-                                <span class="">Chưa có tài khoản? <a th:action="@{/registration}" method="get">Đăng kí ngay</a></span>
+                                <span class="">Chưa có tài khoản? <a th:href="@{/dang-ky}" method="get">Đăng ký ngay</a></span>
                             </div>
                         </div>
                     </form>
