--- a/src/main/resources/templates/shared/_layout.html
+++ b/src/main/resources/templates/shared/_layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js"
       xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       th:fragment="main-fragment (title, mainContent)">
 <head>
     <!-- Mobile Specific Meta -->
@@ -73,9 +74,13 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true"
                                aria-expanded="false"><span class="fa fa-user"></span></a>
-                            <ul class="dropdown-menu">
+                            <ul sec:authorize="isAuthenticated()">
+                                <li class="nav-item user_name" th:text="${#authentication.name}"><h6></h6></li>
+                                <li class="nav-item"><a class="nav-link" th:href="@{/dang-xuat}">Đăng xuất</a></li>
+                            </ul>
+                            <ul sec:authorize="isAnonymous()">
                                 <li class="nav-item user_name"><a class="nav-link" href="/dang-nhap">Đăng nhập</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/dang-ki">Đăng kí</a></li>
+                                <li class="nav-item"><a class="nav-link" th:href="@{/dang-ky}">Đăng ký</a></li>
                             </ul>
                         </li>
                     </ul>
