--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -6,7 +6,7 @@
                                                 ~{:: #main-content}
                                                )}"> 
 <head>
-        <title>Đăng kí - Guitar Shop</title>
+        <title>Đăng ký - Guitar Shop</title>
 </head>
 <body>
 <div id="main-content">
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
                 <div class="col-first">
-                    <h1>Đăng kí tài khoản</h1>
+                    <h1>Đăng ký tài khoản</h1>
                 </div>
             </div>
         </div>
@@ -31,10 +31,10 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <form autocomplete="off" action="#" th:action="@{/dang-ki}"
+                    <form autocomplete="off" action="#" th:href="@{/dang-ky}"
                           th:object="${person}" method="post" class="login_form_inner"
                           role="form">
-                        <h3>Đăng kí</h3>
+                        <h3>Đăng ký</h3>
                         <div class="row login_form">
                             <div class="col-md-12 form-group">
                                 <input type="email" th:field="*{email}" placeholder="Email"
@@ -63,7 +63,7 @@
                                        class="form-control" />
                             </div>
                             <div class="col-md-12 form-group">
-                                <button type="submit" class="primary-btn" id="btnRegister">Đăng kí</button>
+                                <button type="submit" class="primary-btn" id="btnRegister">Đăng ký</button>
                                 <div class="redirect_login">
                                     Đã có tài khoản?
                                     <a href="/dang-nhap">Đăng nhập</a>
@@ -79,7 +79,7 @@
                     </button>
                     <div class="dialog_wrapper">
                         <p>
-                        <h4>Đăng kí thành công!</h4>
+                        <h4>Đăng ký thành công!</h4>
                         </p>
                         <p>Cảm ơn bạn đã trở thành thành viên của Guitar Shop!</p>
                         <div class="dialog_navigation">
