--- a/src/main/resources/templates/contact/contact.html
+++ b/src/main/resources/templates/contact/contact.html
@@ -3,7 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       th:replace="~{/shared/_layout :: main-fragment(
                                                 ~{::title},
-                                                ~{:: #main-content}
+                                                ~{:: #main-content},
+                                                ${PersonalInformation}
                                                )}"> 
 <head>
         <title>Liên hệ - Guitar Shop</title>
