--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -2,7 +2,8 @@
 <html class="no-js"
       th:replace="~{/shared/_layout :: main-fragment(
                                                 ~{::title},
-                                                ~{:: #main-content}
+                                                ~{:: #main-content},
+                                                ${PersonalInformation}
                                                )}"
       xmlns:th="http://www.thymeleaf.org"> 
 <head>
