--- a/src/main/resources/templates/product/product-detail.html
+++ b/src/main/resources/templates/product/product-detail.html
@@ -4,7 +4,7 @@
       th:replace="~{/shared/_layout :: main-fragment(
                                                 ~{::title},
                                                 ~{:: #main-content},
-                                                ${PersonalInformation}
+                                                ${session.PersonalInformation}
                                                )}"> 
 <head>
         <title>Chi tiết sản phẩm - Guitar Shop</title>
