--- a/src/main/resources/templates/cart/cart-detail.html
+++ b/src/main/resources/templates/cart/cart-detail.html
@@ -123,7 +123,7 @@
                     <div class="out_button_area row justify-content-end">
                         <div class="checkout_btn_inner d-flex align-items-center">
                             <a class="gray_btn" href="/">Tiếp tục mua hàng</a>
-                            <a class="primary-btn" href="#">Thanh toán</a>
+                            <a class="primary-btn" href="/thanh-toan">Thanh toán</a>
                         </div>
                     </div>
                     <div id="test-key"></div>
