--- a/src/main/resources/templates/cart/checkout.html
+++ b/src/main/resources/templates/cart/checkout.html
@@ -29,30 +29,30 @@
                 <div class="checkout_section">
                     <div class="title_head">
                         <h3>Thông tin giao hàng</h3>
-                        <p>Đã có tài khoản? <a href="#">Đăng nhập</a></p>
+                        <p>Đã có tài khoản? <a th:href="@{/dang-nhap}">Đăng nhập</a></p>
                     </div>
                     <div class="shipping_info">
                         <div class="form-group">
                             <label>Họ tên *</label>
-                            <input type="text">
+                            <input type="text" th:value="${PersonalInformation.getName()}">
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Số điện thoại *</label>
-                                    <input type="text">
+                                    <input type="text" th:value="${PersonalInformation.getPhone()}">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="email">
+                                    <input type="email" th:value="${PersonalInformation.getEmail()}">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <label>Địa chỉ *</label>
-                            <input type="text">
+                            <input type="text" th:value="${PersonalInformation.getAddress()}">
                         </div>
                         <div class="form-group">
                             <label>Lời nhắn</label>
@@ -94,21 +94,25 @@
                         <a href="/gio-hang" class="edit_cart"><i class="fa fa-edit"></i>Chỉnh sửa</a>
                     </div>
                     <div class="cart_detail_info">
-                        <div class="cart_detail_item row">
-                            <div class="col-lg-7 col-6 item_name">
-                                <h6><a href="#">Guitar 123 (1)</a></h6>
+                        <th:block th:each="item : ${session.sessionCart}">
+                            <div class="cart_detail_item row" th:with="product=${item.getValue().getProduct()}, quantity=${item.getValue().getQuantity()}">
+                                <div class="col-lg-7 col-6 item_name">
+                                    <h6><a th:href="@{'/chi-tiet/' + ${product.getMetadata()} + '-' + ${product.getId()}}" th:text="${product.getName() + '(' + quantity + ')'}"></a></h6>
+                                </div>
+                                <div class="col-lg-5 col-6 item_price">
+                                    <h6 th:text="(${product.getDiscountAmount()} > 0) ?
+                                    ${#numbers.formatDecimal((quantity * product.getPrice() * (100 - product.getDiscountAmount()) / 100),0,'POINT',0,'COMMA')+'đ'} :
+                                    ${#numbers.formatDecimal((quantity * product.getPrice()),0,'POINT',0,'COMMA')+'đ'}"></h6>
+                                </div>
                             </div>
-                            <div class="col-lg-5 col-6 item_price">
-                                <h6>2.700.000đ</h6>
-                            </div>
-                        </div>
+                        </th:block>
                         <hr />
                         <div class="total_info row">
                             <div class="col-lg-7 col-6 item_name">
                                 <h6>Tạm tính:</h6>
                             </div>
                             <div class="col-lg-5 col-6 item_price">
-                                <h6>2.700.000đ</h6>
+                                <h6 th:text="${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}"></h6>
                             </div>
                         </div>
                         <div class="total_info row">
@@ -132,7 +136,7 @@
                                 <h6>Tổng cộng:</h6>
                             </div>
                             <div class="col-6 item_price">
-                                <h3>2.700.000đ</h3>
+                                <h3 th:text="${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}"></h3>
                             </div>
                         </div>
 
