--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -39,14 +39,14 @@
                                 <input class="form-control" placeholder="Email" type="email" id="email" name="email">
                             </div>
                             <div class="col-md-12 form-group">
-                                <input class="form-control" placeholder="Mật khẩu" type="password" id="password" name="password">
+                                <input class="form-control" placeholder="Mật mã" type="password" id="password" name="password">
                             </div>
                             <div class="col-md-12 form-group forgot_password">
                                 <div class="row remember_me">
-                                    <input id="f-option2" type="checkbox">
+                                    <input id="f-option2" type="checkbox" name="remember-me" />
                                     <label for="f-option2">Duy trì đăng nhập</label>
                                 </div>
-                                <a href="#">Quên mật khẩu?</a>
+                                <a href="#">Quên mật mã?</a>
                             </div>
                             <div class="col-md-12 form-group">
                                 <button class="primary-btn" name="Submit" value="Login" type="Submit" >Đăng nhập</button>
