--- a/src/main/resources/templates/shared/_layout.html
+++ b/src/main/resources/templates/shared/_layout.html
@@ -88,11 +88,11 @@
             </div>
         </nav>
     </div>
-    <form action="search" th:attr="action=@{/tim-kiem/}">
+    <form action="search" th:attr="action=@{/tim-kiem}">
         <div class="search_input" id="search_input_box">
             <div class="container">
                 <div class="d-flex justify-content-between">
-                    <input type="text" name="tu-khoa" class="form-control"/>
+                    <input type="text" name="tu-khoa" class="form-control" placeholder="Từ Khóa . . ."/>
                     <button type="submit" class="btn"></button>
                     <span class="lnr lnr-cross" id="close_search" title="Đóng"></span>
                 </div>
