--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -40,6 +40,7 @@
                             </div>
                             <div class="col-md-12 form-group">
                                 <input class="form-control" placeholder="Mật mã" type="password" id="password" name="password">
+                                <label th:if="${error != null}" th:text="${error}" style="color: #dc3545"></label>
                             </div>
                             <div class="col-md-12 form-group forgot_password">
                                 <div class="row remember_me">
