--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -34,30 +34,32 @@
                 <div class="col-lg-6">
                     <form autocomplete="off" action="#" th:href="@{/dang-ky}"
                           th:object="${person}" method="post" class="login_form_inner"
-                          role="form">
+                          role="form" id="registrationForm">
                         <h3>Đăng ký</h3>
                         <div class="row login_form">
                             <div class="col-md-12 form-group">
                                 <input type="email" th:field="*{email}" placeholder="Email"
                                        class="form-control" />
                                 <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-                                    class="validation-message"></label>
+                                    class="validation-message" style="color: #dc3545"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="password" th:field="*{password}"
                                        placeholder="Mật mã" class="form-control" />
                                 <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-                                    class="validation-message"></label>
+                                    class="validation-message" style="color: #dc3545"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="text" th:field="*{name}" placeholder="Họ và tên"
                                        class="form-control" />
                                 <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-                                       class="validation-message"></label>
+                                       class="validation-message" style="color: #dc3545"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="text" th:field="*{phone}" placeholder="Số điện thoại"
                                        class="form-control" />
+                                <label th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"
+                                       class="validation-message" style="color: #dc3545"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="text" th:field="*{address}" placeholder="Địa chỉ"
