--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -27,28 +27,19 @@
         <div class="container">
             <div class="result_overview">
                 <th:block th:if="${#lists.isEmpty(pageListProduct.pageList)}">
-                <h4 th:text="'Kết quả tìm được: '+${result.size()}+' sản phẩm'"></h4>
+                <h4 th:text="'Không tìm thấy sản phẩm!'"></h4>
                 <hr />
                 </th:block>
             </div>
             <th:block th:unless="${#lists.isEmpty(pageListProduct.pageList)}">
-            <div class="filter-bar d-flex flex-wrap align-items-center justify-content-end">
-                <ul class="pagination">
-                    <th:block th:each="item : ${#numbers.sequence(beginPage, endPage)}">
-                        <li th:class="${item == currentPage ? 'page-item active' : 'page-item'}">
-                            <a class="page-link" th:href="@{~/tim-kiem(tu-khoa=${tukhoa}, page=${item})}">
-                                <span th:text='${item}'></span>
-                            </a>
-                        </li>
-                    </th:block>
-                </ul>
-            </div>
+                <h4 th:text="'Kết quả tìm được: '+${count}+' sản phẩm'"></h4>
+                <hr />
             <div class="result_list">
                 <div class="row">
                     <!--/*@thymesVar id="result" type=""*/-->
                     <th:block th:each="product : ${pageListProduct.pageList}">
                         <a th:href="@{~/chi-tiet/(name=${product.metadata},id=${product.Id})}">
-                            <div class="col-lg-4 col-md-6 col-sm-4 col-6">
+                            <div class="col-lg-3 col-md-6 col-sm-4 col-6">
                                 <div class="single-product">
                                     <img class="img-fluid" th:src="${product.imageThumbnail}" alt="">
                                     <div class="product-details s_product_text">
@@ -66,7 +57,7 @@
                                             </th:block>
                                         </div>
                                         <div class="prd-bottom card_area">
-                                            <a class="primary-btn" href="#">Thêm vào giỏ</a>
+                                            <a class="primary-btn" th:href="@{/add-to-cart(productId=${product.id}, quantity=1)}">Thêm vào giỏ</a>
                                         </div>
                                     </div>
                                 </div>
@@ -78,7 +69,7 @@
             <div class="filter-bar d-flex flex-wrap align-items-center justify-content-end">
                 <ul class="pagination">
                     <th:block th:each="item : ${#numbers.sequence(beginPage, endPage)}">
-                        <li th:class="${item == currentPage ? 'page-item active' : 'page-item'}">
+                        <li th:class="${item == currentPage ? 'active' : ''}">
                             <a class="page-link" th:href="@{~/tim-kiem(tu-khoa=${tukhoa}, page=${item})}">
                                 <span th:text='${item}'></span>
                             </a>
@@ -87,9 +78,6 @@
                 </ul>
             </div>
             </th:block>
-            <!--<div class="filter-bar d-flex flex-wrap align-items-center justify-content-end">
-                @Html.PagedListPager((IPagedList)Model, page => Url.Action("SearchResult", new { searchText = ViewBag.searchText, page }))
-            </div>-->
     </section> 
 </div>
 </body>
