--- a/src/main/resources/templates/shared/_layout.html
+++ b/src/main/resources/templates/shared/_layout.html
@@ -92,7 +92,7 @@
         <div class="search_input" id="search_input_box">
             <div class="container">
                 <div class="d-flex justify-content-between">
-                    <input type="text" name="tu-khoa" class="form-control" placeholder="Từ Khóa . . ."/>
+                    <input type="text" name="tu-khoa" class="form-control" placeholder="Nhập từ khoá tìm kiếm ..."/>
                     <button type="submit" class="btn"></button>
                     <span class="lnr lnr-cross" id="close_search" title="Đóng"></span>
                 </div>
