--- a/src/main/resources/templates/cart/checkout.html
+++ b/src/main/resources/templates/cart/checkout.html
@@ -24,7 +24,7 @@
     <!-- End Banner Area -->
     <!-- Start Checkout Area --> 
     <div class="container">
-        <div class="checkout_area row">
+        <form class="checkout_area row" id="checkoutForm">
             <div class="col-lg-7">
                 <div class="checkout_section">
                     <div class="title_head">
@@ -37,29 +37,29 @@
                     <div class="shipping_info">
                         <div class="form-group">
                             <label>Họ tên *</label>
-                            <input type="text" th:value="${PersonalInformation.getName()}">
+                            <input type="text" id="customerName" th:value="${PersonalInformation.getName()}">
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Số điện thoại *</label>
-                                    <input type="text" th:value="${PersonalInformation.getPhone()}">
+                                    <input type="text" id="customerPhone" th:value="${PersonalInformation.getPhone()}">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="email" th:value="${PersonalInformation.getEmail()}">
+                                    <input type="email" id="customerEmail" th:value="${PersonalInformation.getEmail()}">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <label>Địa chỉ *</label>
-                            <input type="text" th:value="${PersonalInformation.getAddress()}">
+                            <input type="text" id="customerAddress" th:value="${PersonalInformation.getAddress()}">
                         </div>
                         <div class="form-group">
                             <label>Lời nhắn</label>
-                            <textarea type="text" rows="5"></textarea>
+                            <textarea type="text" id="customerMessage" rows="5"></textarea>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                                 <h6>Tổng cộng:</h6>
                             </div>
                             <div class="col-6 item_price">
-                                <h3 th:text="${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}"></h3>
+                                <h3 id="total" th:text="${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}"></h3>
                             </div>
                         </div>
 
@@ -143,9 +143,23 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
-    <!-- End Checkout Area -->    
+    <!-- End Checkout Area -->   
+    <dialog class="success_dialog">
+        <button type="button" class="close closeDialog" data-dismiss="modal" title="Đóng">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="dialog_wrapper">
+            <p>
+            <h4>Đặt hàng thành công!</h4>
+            </p>
+            <p>Guitar Shop trân trọng cảm ơn sự lựa chọn của bạn!</p>
+            <div class="dialog_navigation">
+                <a href="/" class="primary-btn">Về trang chủ</a>
+            </div>
+        </div>
+    </dialog> 
 </div>
 </body>
 </html>
