--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -41,25 +41,25 @@
                                 <input type="email" th:field="*{email}" placeholder="Email"
                                        class="form-control" />
                                 <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-                                    class="validation-message" style="color: #dc3545"></label>
+                                    class="validation-message"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="password" th:field="*{password}"
                                        placeholder="Mật mã" class="form-control" />
                                 <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-                                    class="validation-message" style="color: #dc3545"></label>
+                                    class="validation-message"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="text" th:field="*{name}" placeholder="Họ và tên"
                                        class="form-control" />
                                 <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-                                       class="validation-message" style="color: #dc3545"></label>
+                                       class="validation-message"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="text" th:field="*{phone}" placeholder="Số điện thoại"
                                        class="form-control" />
                                 <label th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"
-                                       class="validation-message" style="color: #dc3545"></label>
+                                       class="validation-message"></label>
                             </div>
                             <div class="col-md-12 form-group">
                                 <input type="text" th:field="*{address}" placeholder="Địa chỉ"
