Add to cart in category

--- a/src/main/resources/templates/category/category.html
+++ b/src/main/resources/templates/category/category.html
@@ -96,7 +96,7 @@
                                                 </th:block>
                                             </div>
                                             <div class="prd-bottom card_area">
-                                                <a class="primary-btn" href="#">Thêm vào giỏ</a>
+                                                <a class="primary-btn" th:href="@{/add-to-cart(productId=${item.id}, quantity=1)}">Thêm vào giỏ</a>
                                             </div>
                                         </div>
                                     </div>
