--- a/src/main/resources/templates/cart/checkout.html
+++ b/src/main/resources/templates/cart/checkout.html
@@ -38,12 +38,14 @@
                         <div class="form-group">
                             <label>Họ tên *</label>
                             <input type="text" id="customerName" th:value="${PersonalInformation.getName()}">
+                            <label class="validation-message" id="customerNameError"></label>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Số điện thoại *</label>
                                     <input type="text" id="customerPhone" th:value="${PersonalInformation.getPhone()}">
+                                    <label class="validation-message" id="customerPhoneError"></label>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -56,6 +58,7 @@
                         <div class="form-group">
                             <label>Địa chỉ *</label>
                             <input type="text" id="customerAddress" th:value="${PersonalInformation.getAddress()}">
+                            <label class="validation-message" id="customerAddressError"></label>
                         </div>
                         <div class="form-group">
                             <label>Lời nhắn</label>
@@ -126,12 +129,34 @@
                                 <h6>Miễn phí</h6>
                             </div>
                         </div>
-                        <div class="total_info row">
-                            <div class="col-6 item_name">
-                                <h6>Tổng cộng:</h6>
+                        <div th:switch="${session.sessionDiscountCode != null}">
+                            <div th:case="true">
+                                <div class="total_info row">
+                                    <div class="col-lg-7 col-6 item_name">
+                                        <h6>Giảm giá:</h6>
+                                    </div>
+                                    <div class="col-lg-5 col-6 item_price">
+                                        <h6 th:text="${#numbers.formatDecimal((session.sessionDiscountCode.getDiscountAmount() * session.sessionCartTotal / 100),0,'POINT',0,'COMMA')+'đ'}"></h6>
+                                    </div>
+                                </div>
+                                <div class="total_info row">
+                                    <div class="col-6 item_name">
+                                        <h6>Tổng cộng:</h6>
+                                    </div>
+                                    <div class="col-6 item_price">
+                                        <h3 id="total" th:text="${#numbers.formatDecimal(session.sessionCartTotal * (100 - session.sessionDiscountCode.getDiscountAmount()) / 100,0,'POINT',0,'COMMA')+'đ'}"></h3>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-6 item_price">
-                                <h3 id="total" th:text="${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}"></h3>
+                            <div th:case="false">
+                                <div class="total_info row">
+                                    <div class="col-6 item_name">
+                                        <h6>Tổng cộng:</h6>
+                                    </div>
+                                    <div class="col-6 item_price">
+                                        <h3 id="total" th:text="${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}"></h3>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
